2001-11-01  Bruno Haible  <haible@clisp.cons.org>

	* msgl-equal.h (string_list_equal): New declaration.
	* msgl-equal.c (string_list_equal): Export function.
	* message.h (struct altstr): New fields 'comment', 'comment_dot'.
	* msgl-cat.c: Include msgl-equal.h.
	(catenate_msgdomain_list): If all alternative comments are equal,
	use one copy of them, instead of concatenating them. Likewise for dot
	comments.
	* Makefile.am (libgettextsrc_la_SOURCES): Add msgl-equal.c.
	(msgmerge_SOURCES): Remove msgl-equal.c.

2001-10-31  Bruno Haible  <haible@clisp.cons.org>

	* Makefile.am (noinst_HEADERS): Add read-java.h, write-java.h,
	format.h, msgunfmt.h.
	(EXTRA_DIST): Add project-id, gnu/gettext/*.java.
	* message.h (NFORMATS): Define via #define, not via an enum value.
	* format.h (struct formatstring_parser): Use PARAMS.
	* format-c.c (FAT_SIZE_MASK): Remove extraneous backslashes.
	* po-charset.c (po_lex_charset_set): Fix syntax error.
	* write-java.c (write_java_string): Drop hexdigit[] size.
	* x-java.l (add_object): Remove C++ style comment.

2001-10-28  Bruno Haible  <haible@clisp.cons.org>

	* hostname.c: Include "progname.h".
	(program_name): Remove variable.
	(main): Call set_program_name instead of setting program_name.

2001-10-28  Bruno Haible  <haible@clisp.cons.org>

	Create a libgettextsrc shared library.
	* Makefile.am (lib_LTLIBRARIES): New variable.
	(libgettextsrc_la_SOURCES): New variable.
	(msgcmp_SOURCES, msgfmt_SOURCES, msgmerge_SOURCES, msgunfmt_SOURCES,
	xgettext_SOURCES, msgattrib_SOURCES, msgcat_SOURCES, msgcomm_SOURCES,
	msgconv_SOURCES, msgen_SOURCES, msgexec_SOURCES, msggrep_SOURCES,
	msginit_SOURCES, msguniq_SOURCES): Remove source files listed in
	libgettextsrc_la_SOURCES.
	(libgettextsrc_la_LDFLAGS): New variable.
	(msgcmp_LDADD, msgfmt_LDADD, msgmerge_LDADD, msgunfmt_LDADD,
	xgettext_LDADD, msgattrib_LDADD, msgcat_LDADD, msgcomm_LDADD,
	msgconv_LDADD, msgen_LDADD, msgexec_LDADD, msggrep_LDADD,