@@ -21,9 +21,16 @@
 
 #include "message.h"
 
+/* Converts the message list MLP to the (already canonicalized) encoding
+   CANON_TO_CODE.  The (already canonicalized) encoding before conversion
+   can be passed as CANON_FROM_CODE; if NULL is passed instead, the
+   encoding is looked up in the header entry.  */
 extern void
        iconv_message_list PARAMS ((message_list_ty *mlp,
+				   const char *canon_from_code,
 				   const char *canon_to_code));
+
+/* Converts all the message lists in MDLP to the encoding TO_CODE.  */
 extern msgdomain_list_ty *
        iconv_msgdomain_list PARAMS ((msgdomain_list_ty *mdlp,
 				     const char *to_code));
